# meshagent-anthropic

./: CHANGELOG.md  README.md  pyproject.toml
meshagent/anthropic/: __init__.py  event_publisher.py  mcp.py  messages_adapter.py  openai_responses_stream_adapter.py  thread_adapter.py  usage.py  web_fetch.py  web_search.py
meshagent/anthropic/proxy/: proxy.py
meshagent/anthropic/tests/: anthropic_live_test.py  mcp_test.py  messages_adapter_test.py  openai_responses_stream_adapter_test.py  proxy_test.py  thread_adapter_test.py
meshagent/anthropic/tools/: __init__.py  messages_adapter.py
