[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshagent-anthropic"
description = "Anthropic Building Blocks for Meshagent"
dynamic = ["version", "readme"]
requires-python = ">=3.13"
license = "Apache-2.0"
keywords = []
dependencies = [
  "pytest~=8.4",
  "pytest-asyncio~=0.26",
  "meshagent-api~=0.28.11",
  "meshagent-agents~=0.28.11",
  "meshagent-tools~=0.28.11",
  "anthropic~=0.78.0",
  "html-to-markdown~=2.24.3",
]

[project.urls]
Documentation = "https://docs.meshagent.com"
Website = "https://www.meshagent.com"
Source = "https://www.meshagent.com"

[tool.setuptools.packages.find]
include = ["meshagent.*"]

[tool.setuptools.package-data]
"meshagent.anthropic" = ["py.typed", "*.pyi", "**/*.pyi", "**/*.js"]

[tool.setuptools.dynamic]
version = {attr = "meshagent.anthropic.version.__version__"}
readme = { file = "README.md", content-type = "text/markdown" }
